Added education portion

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -28,6 +28,7 @@
 			<ul>
 				<li><a href="#home" class="home-link is-active">Home</a></li>
 				<li><a href="#about" class="aside-link">About</a></li>
+				<li><a href="#education" class = "aside-link">Education</a></li>
 				<li><a href="#timeline" class="aside-link">Work Experience</a></li>
 				<li><a href="#contact" class="aside-link">Contact</a></li>
 				<li>
@@ -86,19 +87,30 @@
 						<p class="mb-0">Things I enjoy doing outside of work would be reading historical books, watching movies with friends and family, and going on long walks in the wilderness.</p>
 					</div>
 				</div>
-				
-				<!-- <h1 class="capitalize mb-5">About Me<br></h1>
-
-				<div class="row pt-5">
-					<div class="col-md centerAll">
-						<img src="img/portfolioPic.png" alt="">
-					</div>
-					<div class="col-md">
-						<p class="mb-0">Hello! I'm Taichen a Senior at Western Washington University (WWU), and currently am a part-time Web Developer for Jeopardy Magazine and a Teaching Assistant at WWU. I enjoy creating, whether that be for the internet, a new software, or even getting my hands dirty in the outdoors.<br><br>I have over 1 year of experience working for large tech companies, or small organizations. While I am a proficient full-stack developer, my expertise is building front-end experiences for the user. Any type of problem solving I fully enjoy, however I like to focus my efforts towards real customer problems and solutions.<br><br>Things I enjoy doing outside of work would be reading historical books, watching movies with friends and families, and going on long walks.</p>
-					</div>
-				</div> -->
 			</section>
 			<!-- /About -->
+
+			<!-- Education -->
+			<section id="education">
+
+				<h1 class="capitalize mb-5">Education</h1>
+				<p class="separator-left mb-6"></p>
+
+				<div class="educationList">
+					<div class="educationBlock">
+						<h4>B.S. in Computer Science at Western Washington University</h4>
+						<h5>Minors: Economics and Web Development Certificate</h5>
+						<p>Expected June 2021<br>GPA: 3.19/4.0</p>
+					</div><br><hr><br>
+
+					<div class="educationBlock">
+						<h4>A.S. in Physics/Engineering at Skagit Valley College</h4>
+						<p>2016 - 2018<br>GPA: 3.3/4.0</p>
+					</div>
+				</div>
+		
+			</section>
+			<!-- /Education -->
 	
 			<!-- Timeline -->
 			<section id="timeline">
