Added new jobs to work experinece section

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -32,7 +32,7 @@
 				<li><a href="#timeline" class="aside-link">Work Experience</a></li>
 				<li><a href="#contact" class="aside-link">Contact</a></li>
 				<li>
-					<a href="#">Project Work</a>
+					<a href="projects.html">Project Work</a>
 					<ul>
 						<li><a href="project1.html">Deadwood Board Game</a></li>
 						<li><a href="project2.html">Tex2Speech</a></li>
@@ -119,6 +119,16 @@
 				<p class="separator-left mb-6"></p>
 
 				<div class="timeline">
+					<div class="timeline-item">
+						<div class="item-date">September 2020 - December 2020</div>
+						<h5>Web Developer | Jeopardy Magazine</h5>
+						<p>Desiging online jeopardy magazine's 57th edition. Work with graphic designer and communicate with editors to ensure practical design.</p>
+					</div>
+					<div class="timeline-item">
+						<div class="item-date">January 2021 - Present</div>
+						<h5>Teaching Assistant | Western Washington University (WWU)</h5>
+						<p>Independently supervised weekly labs of 10-15 students, providing educational help and materials. Worked under professor's direction to maintain a clean and organized class.</p>
+					</div>
 					<div class="timeline-item">
 						<div class="item-date">September 2020 - December 2020</div>
 						<h5>Software Developer Intern | Nooksack Salmon Enhancement Association (NSEA)</h5>
@@ -236,7 +246,7 @@
 				<!-- copyright -->
 				<div class="">
 					<p class="separator-left mt-8"></p>
-					<small>&copy; Taichen Rose 2020</small>
+					<small>&copy; Copyright; Taichen Rose</small>
 				</div>
 				
 			</section>
