--- a/Tai_Portfolio/portfolio/project1.html
+++ b/Tai_Portfolio/portfolio/project1.html
@@ -27,8 +27,8 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html">
-						<i class="fa fa-arrow-left mr-2"></i> Back To Home
+					<a href="projects.html">
+						<i class="fa fa-arrow-left mr-2"></i> Back To Projects
 					</a>
 				</li>
 			</ul>
@@ -195,7 +195,7 @@
 	</div>
 
 	<!-- Copyright -->
-	<small class="mt-4">&copy; Copyright; Taichen Rose 2020</small>
+	<small class="mt-4">&copy; Copyright; Taichen Rose</small>
 
 </footer>
 <!-- /Footer -->
