Changing project name organization

--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -54,7 +54,7 @@
 				<span data-filter=".web">Web Applications</span>
 				<span data-filter=".game">Games</span>
 				<span data-filter=".app">Apps</span>
-				<span data-filter=".other">Other</span>
+				<span data-filter=".research">Research</span>
 			</div>
 			<!-- /Portfolio Filter -->
 
@@ -104,7 +104,7 @@
 						</div>
 					</figure>
 
-					<figure class="swiper-slide portfolio-item project-item other">
+					<figure class="swiper-slide portfolio-item project-item web">
 						<div class="inner">
 							<!-- Image -->
 							<div class="item-img" data-background="img/folio/Map/FullMap.PNG"></div>
@@ -118,7 +118,7 @@
 						</div>
 					</figure>
 
-					<figure class="swiper-slide portfolio-item project-item other">
+					<figure class="swiper-slide portfolio-item project-item research">
 						<div class="inner">
 							<!-- Image -->
 							<div class="item-img" data-background="img/folio/tex2speech/homePage.PNG"></div>
