Updating index page and adding icons
Deleted unnecessary about page, changing my about and adding in icons

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -65,25 +65,24 @@
 				<p class="separator-left mb-6"></p>
 				
 				<!-- Slider -->
-				<div class="swiper" data-autoplay="3000" data-effect="fade" data-loop="true" data-nav="true" data-pagination="true">
+				<!-- <div class="swiper" data-autoplay="3000" data-effect="fade" data-loop="true" data-nav="true" data-pagination="true">
 					<div class="swiper-slide" width = 100% height = auto>
 						<img src="img/gallery/me.jpg" alt="" width = 100% height = auto>
 					</div>
 					<div class="swiper-slide" width = 100% height = auto>
 						<img src="img/gallery/hike.jpg" alt="" width = 100% height = auto>
 					</div>
-				</div>
+				</div> -->
 				<!-- /Slider -->
 
 				<div class="row pt-5">
 					<div class="col-md">
-						<p class="mb-0">Hello! I'm Taichen a Senior at Western Washington University (WWU), and currently am a part-time Web Developer for Jeopardy Magazine and a Teaching Assistant at WWU. I enjoy creating, whether that be for the internet, a new software, or even getting my hands dirty in the outdoors.</p>
+						<img src = "./img/gallery/me.jpg" alt = "">
 					</div>
 					<div class="col-md">
-						<p class="mb-0">I have over 1 year of experience working for large tech companies, or small organizations. While I am a proficient full-stack developer, my expertise is building front-end experiences for the user. Any type of problem solving I fully enjoy, however I like to focus my efforts towards real customer problems and solutions.</p>
-					</div>
-					<div class="col-md">
-						<p class="mb-0">Things I enjoy doing outside of work would be reading historical books, watching movies with friends and family, and going on long walks in the wilderness.</p>
+						<p class="mb-0">Hello! I'm Taichen, a full-stack developer based in Jersey City, NJ. You can find me working on open source software, developing web applications, or learning about new technologies. I work for the AWS Tech Giant in Cloud Infrastructure.</p>
+						<p></p>
+
 					</div>
 				</div>
 			</section>
@@ -97,7 +96,7 @@
 
 				<div class="timeline">
 					<div class="timeline-item">
-						<div class="item-date">September 2020 - December 2020</div>
+						<div class="item-date">January 2021 - June 2021</div>
 						<h5>Web Developer | Jeopardy Magazine</h5>
 						<p>Desiging online jeopardy magazine's 57th edition. Work with graphic designer and communicate with editors to ensure practical design.</p>
 					</div>
