Changed all the names updated accepted page

--- a/Tai_Portfolio/portfolio/bookstore.html
+++ b/Tai_Portfolio/portfolio/bookstore.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Taichen - Bookstore Project</title>
+	<title>Bookstore Project</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="img/favicon.ico">
