--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -52,9 +52,9 @@
 			<div class="portfolio-carousel-filter portfolio-filter">
 				<span data-filter="*" class="is-active">All</span>
 				<span data-filter=".web">Web Applications</span>
+				<span data-filter=".software">Software</span>
 				<span data-filter=".game">Games</span>
 				<span data-filter=".app">Apps</span>
-				<span data-filter=".research">Research</span>
 			</div>
 			<!-- /Portfolio Filter -->
 
@@ -62,6 +62,22 @@
 			<div class="portfolio-carousel swiper-container">
 				<div class="swiper-wrapper">
 
+					<!-- Tex2Speech -->
+					<figure class="swiper-slide portfolio-item project-item web software">
+						<div class="inner">
+							<!-- Image -->
+							<div class="item-img" data-background="img/folio/tex2speech/homePage.PNG"></div>
+							<!-- URL / Lightbox -->
+							<a href="project2.html" class="item-link"></a>
+							<!-- Caption -->
+							<figcaption>
+								<p>Text-To-Speech application for LaTeX documents using SSML</p>
+								<h2 class="item-title">Tex2Speech</h2>
+							</figcaption>
+						</div>
+					</figure>
+
+					<!-- Bookstore Project -->
 					<figure class="swiper-slide portfolio-item project-item web">
 						<div class="inner">
 							<!-- Image -->
@@ -114,20 +130,6 @@
 							<figcaption>
 								<p>Map to display NSEA's salmon restoration projects across Whatcom County in Washington</p>
 								<h2 class="item-title">Interactive Map</h2>
-							</figcaption>
-						</div>
-					</figure>
-
-					<figure class="swiper-slide portfolio-item project-item research">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/tex2speech/homePage.PNG"></div>
-							<!-- URL / Lightbox -->
-							<a href="project2.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Text-To-Speech application for LaTeX documents using SSML</p>
-								<h2 class="item-title">Tex2Speech</h2>
 							</figcaption>
 						</div>
 					</figure>
