--- a/Tai_Portfolio/portfolio/tex2speech.html
+++ b/Tai_Portfolio/portfolio/tex2speech.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Taichen - Tex2Speech Project</title>
+	<title>Tex2Speech Project</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="img/favicon.ico">
