--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -1,168 +1,237 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Taichen - Portfolio</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="img/favicon.ico">
-	<link rel="stylesheet" href="css/core.css">
-	<link rel="stylesheet" href="css/theme.css">
-	<link rel="stylesheet" href="css/add.css">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Taichen - Portfolio</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/core.css" />
+    <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="css/add.css" />
+  </head>
+  <body>
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
-		<!-- Preloader -->
-		<div id="preloader"></div>
+    <!-- Header -->
+    <header id="header">
+      <!-- Logo -->
+      <a href="index.html" class="logo"> TAICHEN ROSE </a>
 
-		<!-- Header -->
-		<header id="header">
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">
+              <i class="fa fa-arrow-left mr-2"></i> Back To Home
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!-- /Navigation -->
 
-			<!-- Logo -->
-			<a href="index.html" class="logo">
-				TAICHEN ROSE
-			</a>
+      <!-- Mobile Menu Button -->
+      <div class="mob-menu-btn"></div>
+    </header>
+    <!-- /Header -->
 
-			<!-- Navigation -->
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html">
-							<i class="fa fa-arrow-left mr-2"></i> Back To Home
-						</a>
-					</li>
-				</ul>
-			</nav>
-			<!-- /Navigation -->
+    <!-- Main Content -->
+    <main>
+      <div class="container large w-100 pt-9">
+        <h1>Projects</h1>
 
-			<!-- Mobile Menu Button -->
-			<div class="mob-menu-btn"></div>
+        <!-- Portfolio Filter -->
+        <div class="portfolio-carousel-filter portfolio-filter">
+          <span data-filter="*" class="is-active">All</span>
+          <span data-filter=".web">Web Applications</span>
+          <span data-filter=".software">Software</span>
+          <span data-filter=".game">Games</span>
+          <span data-filter=".app">Apps</span>
+        </div>
+        <!-- /Portfolio Filter -->
 
-		</header>
-		<!-- /Header -->
+        <!-- Portfolio Slider -->
+        <div class="portfolio-carousel swiper-container">
+          <div class="swiper-wrapper">
+            <!-- Tex2Speech -->
+            <figure
+              class="swiper-slide portfolio-item project-item web software"
+            >
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/tex2speech/homePage.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="tex2speech.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Text-To-Speech application for LaTeX documents using SSML
+                  </p>
+                  <h2 class="item-title">Tex2Speech</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-	<!-- Main Content -->
-	<main>
+            <!-- Jeopardy Project -->
+            <figure class="swiper-slide portfolio-item project-item web">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/Jeopardy/video_cover.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="jeopardy.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Translation of Jeopardy's 57th edition physical magazine to the web.
+                  </p>
+                  <h2 class="item-title">Jeopardy Magazine 57th Edition</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-		<div class="container large w-100 pt-9">
+            <!-- Accepted Project -->
+            <figure class="swiper-slide portfolio-item project-item web">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/AcceptED/signup.png"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="accepted.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    AcceptED's dashboard for Students, Education Consultants, and Admins.
+                  </p>
+                  <h2 class="item-title">AcceptED Dashboard</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-			<h1>Projects</h1>
+            <!-- Bookstore Project -->
+            <figure class="swiper-slide portfolio-item project-item web">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/Bookstore/home.png"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="bookstore.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Dynamic web application coded with server and client side
+                    coding
+                  </p>
+                  <h2 class="item-title">Bookstore Website</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-			<!-- Portfolio Filter -->
-			<div class="portfolio-carousel-filter portfolio-filter">
-				<span data-filter="*" class="is-active">All</span>
-				<span data-filter=".web">Web Applications</span>
-				<span data-filter=".software">Software</span>
-				<span data-filter=".game">Games</span>
-				<span data-filter=".app">Apps</span>
-			</div>
-			<!-- /Portfolio Filter -->
+            <!-- Deadwood -->
+            <figure class="swiper-slide portfolio-item project-item game">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/Deadwood/StartScreen.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="deadwood.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Created using JavaFX and object oriented concepts and design
+                    patterns
+                  </p>
+                  <h2 class="item-title">Deadwood Board Game</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-			<!-- Portfolio Slider -->
-			<div class="portfolio-carousel swiper-container">
-				<div class="swiper-wrapper">
+            <!-- Alexa Skill -->
+            <figure class="swiper-slide portfolio-item project-item app">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/AmazonSkill/AlexaApp.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="alexa_hackathon.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Alexa skill created during 2020 Alexa Hackathon Challenge
+                  </p>
+                  <h2 class="item-title">Pre-Onboarding Skill</h2>
+                </figcaption>
+              </div>
+            </figure>
 
-					<!-- Tex2Speech -->
-					<figure class="swiper-slide portfolio-item project-item web software">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/tex2speech/homePage.PNG"></div>
-							<!-- URL / Lightbox -->
-							<a href="project2.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Text-To-Speech application for LaTeX documents using SSML</p>
-								<h2 class="item-title">Tex2Speech</h2>
-							</figcaption>
-						</div>
-					</figure>
+            <!-- NSEA Map -->
+            <figure class="swiper-slide portfolio-item project-item web">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/Map/FullMap.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="nsea_map.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Map to display NSEA's salmon restoration projects across
+                    Whatcom County in Washington
+                  </p>
+                  <h2 class="item-title">Interactive Map</h2>
+                </figcaption>
+              </div>
+            </figure>
+          </div>
+        </div>
+        <!-- /Portfolio Slider -->
 
-					<!-- Bookstore Project -->
-					<figure class="swiper-slide portfolio-item project-item web">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/Bookstore/home.png"></div>
-							<!-- URL / Lightbox -->
-							<a href="project4.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Dynamic web application coded with server and client side coding</p>
-								<h2 class="item-title">Bookstore Website</h2>
-							</figcaption>
-						</div>
-					</figure>
+        <!-- Portfolio Footer -->
+        <div class="portfolio-carousel-footer">
+          <!-- Copyright -->
+          <small>&copy; Copyright; Taichen Rose</small>
 
-					<figure class="swiper-slide portfolio-item project-item game">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/Deadwood/StartScreen.PNG"></div>
-							<!-- URL / Lightbox -->
-							<a href="project1.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Created using JavaFX and object oriented concepts and design patterns</p>
-								<h2 class="item-title">Deadwood Board Game</h2>
-							</figcaption>
-						</div>
-					</figure>
+          <!-- Portfolio Controls -->
+          <div class="portfolio-carousel-controls swiper-controls">
+            <div class="prev-btn"></div>
+            <div class="next-btn"></div>
+          </div>
 
-					<figure class="swiper-slide portfolio-item project-item app">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/AmazonSkill/AlexaApp.PNG"></div>
-							<!-- URL / Lightbox -->
-							<a href="project3.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Alexa skill created during 2020 Alexa Hackathon Challenge</p>
-								<h2 class="item-title">Pre-Onboarding Skill</h2>
-							</figcaption>
-						</div>
-					</figure>
+          <!-- Social Links -->
+          <div class="footer-social-links small uppercase">
+            <a
+              href="https://www.linkedin.com/in/taichen-rose-1191b1187/"
+              class="color-linkedin"
+              >Linkedin</a
+            >
+            <a href="https://github.com/willsower" class="color-github"
+              >GitHub</a
+            >
+          </div>
+        </div>
+        <!-- /Portfolio Footer -->
+      </div>
+    </main>
+    <!-- /Main Content -->
 
-					<figure class="swiper-slide portfolio-item project-item web">
-						<div class="inner">
-							<!-- Image -->
-							<div class="item-img" data-background="img/folio/Map/FullMap.PNG"></div>
-							<!-- URL / Lightbox -->
-							<a href="project5.html" class="item-link"></a>
-							<!-- Caption -->
-							<figcaption>
-								<p>Map to display NSEA's salmon restoration projects across Whatcom County in Washington</p>
-								<h2 class="item-title">Interactive Map</h2>
-							</figcaption>
-						</div>
-					</figure>
-				</div>
-			</div>
-			<!-- /Portfolio Slider -->
-
-			<!-- Portfolio Footer -->
-			<div class="portfolio-carousel-footer">
-				<!-- Copyright -->
-				<small>&copy; Copyright; Taichen Rose</small>
-
-				<!-- Portfolio Controls -->
-				<div class="portfolio-carousel-controls swiper-controls">
-					<div class="prev-btn"></div>
-					<div class="next-btn"></div>
-				</div>
-
-				<!-- Social Links -->
-				<div class="footer-social-links small uppercase">
-					<a href="https://www.linkedin.com/in/taichen-rose-1191b1187/" class="color-linkedin">Linkedin</a>
-					<a href="https://github.com/willsower" class="color-github">GitHub</a>
-				</div>
-			</div>
-			<!-- /Portfolio Footer -->
-			
-		</div>
-
-	</main>
-	<!-- /Main Content -->
-
-	<!-- JS -->
-	<script src="js/core.js"></script>
-	<script src="js/theme.js"></script>
-</body>
+    <!-- JS -->
+    <script src="js/core.js"></script>
+    <script src="js/theme.js"></script>
+  </body>
 </html>
