--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -76,6 +76,26 @@
               </div>
             </figure>
 
+            <!-- HealthyEats Project -->
+            <figure class="swiper-slide portfolio-item project-item web">
+              <div class="inner">
+                <!-- Image -->
+                <div
+                  class="item-img"
+                  data-background="img/folio/HealthyEats/video_cover.PNG"
+                ></div>
+                <!-- URL / Lightbox -->
+                <a href="healthyeats.html" class="item-link"></a>
+                <!-- Caption -->
+                <figcaption>
+                  <p>
+                    Android application that displays healthy and affordable meals on a fixed budget.
+                  </p>
+                  <h2 class="item-title">HealthyEats</h2>
+                </figcaption>
+              </div>
+            </figure>
+
             <!-- Jeopardy Project -->
             <figure class="swiper-slide portfolio-item project-item web">
               <div class="inner">
@@ -89,7 +109,8 @@
                 <!-- Caption -->
                 <figcaption>
                   <p>
-                    Translation of Jeopardy's 57th edition physical magazine to the web.
+                    Translation of Jeopardy's 57th edition physical magazine to
+                    the web.
                   </p>
                   <h2 class="item-title">Jeopardy Magazine 57th Edition</h2>
                 </figcaption>
@@ -109,7 +130,8 @@
                 <!-- Caption -->
                 <figcaption>
                   <p>
-                    AcceptED's dashboard for Students, Education Consultants, and Admins.
+                    AcceptED's dashboard for Students, Education Consultants,
+                    and Admins.
                   </p>
                   <h2 class="item-title">AcceptED Dashboard</h2>
                 </figcaption>
