--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -77,12 +77,12 @@
             </figure>
 
             <!-- HealthyEats Project -->
-            <figure class="swiper-slide portfolio-item project-item web">
+            <figure class="swiper-slide portfolio-item project-item app">
               <div class="inner">
                 <!-- Image -->
                 <div
                   class="item-img"
-                  data-background="img/folio/HealthyEats/video_cover.PNG"
+                  data-background="img/folio/HealthyEats/initprototype.PNG"
                 ></div>
                 <!-- URL / Lightbox -->
                 <a href="healthyeats.html" class="item-link"></a>
@@ -201,7 +201,7 @@
             </figure>
 
             <!-- NSEA Map -->
-            <figure class="swiper-slide portfolio-item project-item web">
+            <figure class="swiper-slide portfolio-item project-item web software">
               <div class="inner">
                 <!-- Image -->
                 <div
