Updated each next
Updated all project next

--- a/Tai_Portfolio/portfolio/accepted.html
+++ b/Tai_Portfolio/portfolio/accepted.html
@@ -154,7 +154,7 @@
       <div class="page-nav" style = "padding-top: 11rem !important;">
         <h6>See Next</h6>
         <h1>
-          <a href="project1.html">Deadwood Board Game</a>
+          <a href="bookstore.html">Dynamic Ecommerce Bookstore</a>
         </h1>
       </div>
       <!-- /Page Navigation -->
