--- a/Tai_Portfolio/portfolio/bookstore.html
+++ b/Tai_Portfolio/portfolio/bookstore.html
@@ -150,7 +150,7 @@
 		<div class="page-nav" style = "padding-top: 11rem !important;">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project5.html">Interactive Map Project</a>
+				<a href="deadwood.html">Deadwood</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
