--- a/Tai_Portfolio/portfolio/deadwood.html
+++ b/Tai_Portfolio/portfolio/deadwood.html
@@ -177,7 +177,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project2.html">Tex2Speech</a>
+				<a href="alexa_hackathon.html">Alexa Skill</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
