--- a/Tai_Portfolio/portfolio/jeopardy.html
+++ b/Tai_Portfolio/portfolio/jeopardy.html
@@ -159,7 +159,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project1.html">Deadwood Board Game</a>
+				<a href="accepted.html">AcceptED Dashboard</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
