--- a/Tai_Portfolio/portfolio/alexa_hackathon.html
+++ b/Tai_Portfolio/portfolio/alexa_hackathon.html
@@ -148,7 +148,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project4.html">Bookstore Project</a>
+				<a href="nsea_map.html">NSEA Interactive Map</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
