--- a/Tai_Portfolio/portfolio/healthyeats.html
+++ b/Tai_Portfolio/portfolio/healthyeats.html
@@ -136,7 +136,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project1.html">Deadwood Board Game</a>
+				<a href="jeopardy.html">Jeopardy Magazine</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
