--- a/Tai_Portfolio/portfolio/nsea_map.html
+++ b/Tai_Portfolio/portfolio/nsea_map.html
@@ -148,7 +148,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project1.html">Deadwood Board Game</a>
+				<a href="tex2speech.html">Tex2Speech</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
